Petite correction du nom

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Framework CSS - Démonstration</title>
+    <title>MyCSS - Démonstration</title>
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-fixed-top">
-        <a href="#" class="navbar-brand">Mini Framework</a>
+        <a href="#" class="navbar-brand">MyCSS</a>
         <button class="navbar-toggle">☰</button>
         <div class="navbar-collapse">
             <ul class="navbar-nav">
